# Scientific-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clean.bat  gpu_vram_dump.txt  gpu_vram_multiframe_dump.txt  hydrostatic_profile.csv  imgui.ini  run.bat  test.bat  vcpkg.json
assets/shaders/: fullscreen.vert  light.frag  light.vert  particle.frag  particle.vert  planet.frag  planet.vert  sph_density.comp  sph_forces.comp  sph_hash.comp  sph_offsets.comp  sph_sort.comp  ssfr_blur.frag  ssfr_debug.frag  ssfr_depth.frag  ssfr_depth.vert
include/: Application.h
include/core/: Application.h  Camera.h  ComputeShader.h  Framebuffer.h  GraphicsContext.h  Input.h  PlanetParams.h  PointLight.h  Renderer.h  Scene.h  Shader.h
include/geometry/: Icosahedron.h
include/physics/: Particle.h  SphParams.h  SphSolver.h
include/ui/: Editor.h
src/: main.cpp
src/core/: Application.cpp  Camera.cpp  ComputeShader.cpp  Framebuffer.cpp  GraphicsContext.cpp  Input.cpp  Renderer.cpp  Scene.cpp  Shader.cpp
src/geometry/: Icosahedron.cpp
src/physics/: SphSolver.cpp
src/ui/: Editor.cpp
tests/: test_main.cpp
